wire aread performance to new performance ui

--- a/app/views/_partials/aside.html
+++ b/app/views/_partials/aside.html
@@ -53,9 +53,9 @@
                 <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
                     <a ui-sref="app.performances" title="Performances">
                     <span class="nav-icon">
-                      <i class="ion-ios-speedometer"></i>
+                      <i class="ion-ios-pulse-strong"></i>
                     </span>
-                    <span class="nav-text">Area Performances</span>
+                    <span class="nav-text">Performances</span>
                   </a>
                 </li>
                 <!-- <li ui-sref-active="active" show-if-has-any-permit="jurisdiction:view, servicegroup:view, service:view, priority:view, status:view, user:view, role:view">
