--- a/app/views/dashboards/performance/index.html
+++ b/app/views/dashboards/performance/index.html
@@ -6,15 +6,29 @@
             Performance
         </div>
         <!-- end report title -->
+        <!-- start report actions -->
+        <ul class="nav navbar-nav pull-right">
+
+            <!-- start filter -->
+            <li class="nav-item">
+                <a ng-click="showFilter()" class="nav-link" aria-expanded="false" title="Click to Filter Report">
+                  <i class="ion-android-funnel w-24" title="Click To Filter Reports"></i>
+                </a>
+            </li>
+            <!-- end filter -->
+
+        </ul>
+        <!-- end report actions -->
     </div>
 </div>
 <!-- end report header -->
 <!-- start app body -->
 <div class="app-body">
     <div class="app-body-inner">
-        <!-- start profile summary and service request pipelines -->
-        <ng-include src="'views/dashboards/performance/_partials/profile_summary.html'"></ng-include>
-        <!-- end profile summary and service request pipelines -->
+
+        <!-- start jurisdiction summary and (ttr & att) -->
+        <ng-include src="'views/dashboards/performance/_partials/jurisdiction_summary.html'"></ng-include>
+        <!-- end jurisdiction summary and (ttr & att) -->
 
         <!-- start overal and pipeline summary -->
         <div class="row no-gutter">
@@ -32,7 +46,7 @@
         <!-- start overal and pipeline summary -->
 
         <hr>
-        <div class="padding">
+        <div class="padding" style="display: none">
             <!-- start of leader's board section -->
             <div class="row m-t-lg">
                 <div class="col-sm-12 col-md-5 col-lg-5">
