reduce padding on summary cards on performance ui

--- a/app/views/dashboards/performance/_partials/overall_summary.html
+++ b/app/views/dashboards/performance/_partials/overall_summary.html
@@ -55,7 +55,7 @@
 
                 <!-- start total -->
                 <div class="col-xs-6 col-sm-3 b-r b-b" title="Total Service Requests">
-                    <div class="padding">
+                    <div> <!--class="padding"-->
                         <div class="text-center">
                             <h2 class="text-center _600 m-t-md">
                                 {{performances.overall.count | number:0}}
@@ -68,7 +68,7 @@
 
                 <!-- start pending -->
                 <div class="col-xs-6 col-sm-2 b-r b-b" title="Pending Service Requests">
-                    <div class="padding">
+                    <div> <!--class="padding"-->
                         <div class="text-center">
                             <h2 class="text-center _600 m-t-md">
                                 {{performances.overall.pending | number:0}}
@@ -81,7 +81,7 @@
 
                 <!-- start resolved -->
                 <div class="col-xs-6 col-sm-2 b-r b-b" title="Resolved Service Requests">
-                    <div class="padding">
+                    <div> <!--class="padding"-->
                         <div class="text-center">
                             <h2 class="text-center _600 m-t-md">
                                 {{performances.overall.resolved | number:0}}
@@ -94,7 +94,7 @@
 
                 <!-- start late -->
                 <div class="col-xs-6 col-sm-2 b-r b-b" title="Late(Past SLA Time) Service Requests">
-                    <div class="padding">
+                    <div> <!--class="padding"-->
                         <div class="text-center">
                             <h2 class="text-center _600 m-t-md">
                                 {{performances.overall.late | number:0}}
@@ -107,7 +107,7 @@
 
                 <!-- start escallated -->
                 <div class="col-xs-6 col-sm-3 b-b" title="Late(Past SLA Time) Service Requests">
-                    <div class="padding">
+                    <div> <!--class="padding"-->
                         <div class="text-center">
                             <h2 class="text-center _600 m-t-md">
                                 {{performances.overall.late | number:0}}
