fix a typo in comments

--- a/app/views/dashboards/performance/_partials/jurisdiction_summary.html
+++ b/app/views/dashboards/performance/_partials/jurisdiction_summary.html
@@ -3,7 +3,7 @@
     <div class="p-a-lg">
         <div class="row m-t">
             <div class="col-sm-12 col-md-6 col-lg-6">
-                <!-- start jurisdction avatar -->
+                <!-- start jurisdiction avatar -->
                 <a href="#" class="pull-left m-r-md">
                 <span>
                 <!-- TODO switch between actual image and letter avatar Use base64 uploader -->
@@ -12,7 +12,7 @@
                 <i class="on b-white"></i>
                 </span>
               </a>
-                <!-- end jurisdction avatar -->
+                <!-- end jurisdiction avatar -->
 
                 <!-- start jurisdiction details -->
                 <div class="clear m-b">
