re-show per reporting method summary overview report

--- a/app/views/dashboards/overviews/_partials/jurisdictions_summary.html
+++ b/app/views/dashboards/overviews/_partials/jurisdictions_summary.html
@@ -1,4 +1,4 @@
-<!-- start areas summary -->
+<!-- start jurisdictions summary -->
 <div class="padding m-t-md">
 
     <!-- start report box -->
@@ -19,7 +19,7 @@
 
                 <!-- start export -->
                 <li class="nav-item inline">
-                    <a title="Click To Export" class="btn btn-xs rounded white" aria-expanded="false" ng-csv="export('jurisdictions')" csv-header="exports.jurisdictions.headers" filename="areas_overview_reports_{{filters.startedAt | date:settings.dateFormat}}_{{filters.endedAt | date:settings.dateFormat}}.csv">
+                    <a title="Click To Export" class="btn btn-xs rounded white" aria-expanded="false" ng-csv="export('jurisdictions')" csv-header="exports.jurisdictions.headers" filename="jurisdictions_overview_reports_{{filters.startedAt | date:settings.dateFormat}}_{{filters.endedAt | date:settings.dateFormat}}.csv">
                       Export
                     </a>
                 </li>
@@ -122,4 +122,4 @@
     <!-- end report box -->
 
 </div>
-<!-- end areas summary -->
+<!-- end jurisdictions summary -->
