--- a/app/views/dashboards/overviews/index.html
+++ b/app/views/dashboards/overviews/index.html
@@ -60,6 +60,11 @@
         <ng-include ng-if="overviews.services  && overviews.services.length > 0" src="'views/dashboards/overviews/_partials/services_summary.html'"></ng-include>
         <!-- end services summary -->
 
+         <!-- start methods summary -->
+        <!-- see http://gallery.echartsjs.com/editor.html?c=xrJZ60TVIg -->
+        <ng-include ng-if="overviews.methods  && overviews.methods.length > 0" src="'views/dashboards/overviews/_partials/methods_summary.html'"></ng-include>
+        <!-- end methods summary -->
+
     </div>
 </div>
 <!-- end overview body -->
