--- a/app/views/dashboards/overviews/index.html
+++ b/app/views/dashboards/overviews/index.html
@@ -51,19 +51,20 @@
         <!-- end jurisdictions summary -->
 
         <!-- start service groups summary -->
-        <!-- see http://gallery.echartsjs.com/editor.html?c=xrJZ60TVIg -->
         <ng-include ng-if="overviews.groups && overviews.groups.length > 0" src="'views/dashboards/overviews/_partials/service_groups_summary.html'"></ng-include>
         <!-- end service groups summary -->
 
         <!-- start services summary -->
-        <!-- see http://gallery.echartsjs.com/editor.html?c=xrJZ60TVIg -->
         <ng-include ng-if="overviews.services  && overviews.services.length > 0" src="'views/dashboards/overviews/_partials/services_summary.html'"></ng-include>
         <!-- end services summary -->
 
          <!-- start methods summary -->
-        <!-- see http://gallery.echartsjs.com/editor.html?c=xrJZ60TVIg -->
         <ng-include ng-if="overviews.methods  && overviews.methods.length > 0" src="'views/dashboards/overviews/_partials/methods_summary.html'"></ng-include>
         <!-- end methods summary -->
+
+        <!-- start workspaces summary -->
+        <ng-include ng-if="overviews.workspaces  && overviews.workspaces.length > 0" src="'views/dashboards/overviews/_partials/workspaces_summary.html'"></ng-include>
+        <!-- end workspaces summary -->
 
     </div>
 </div>
