add borders on overview reports boxes

--- a/app/views/dashboards/overviews/_partials/workspaces_summary.html
+++ b/app/views/dashboards/overviews/_partials/workspaces_summary.html
@@ -73,7 +73,7 @@
                 <!-- end tabular stats -->
 
                 <!-- start visual stats -->
-                <div class="col-sm-5 b-r lt">
+                <div class="col-sm-5 b-l lt">
                     <div class="p-a-md">
                         <echart config="perWorkspaceConfig" options="perWorkspaceOptions"></echart>
                     </div>
