restore jurisdiction performance ui

--- a/app/views/dashboards/performance/_partials/overall_summary.html
+++ b/app/views/dashboards/performance/_partials/overall_summary.html
@@ -1,5 +1,5 @@
 <!-- start overall area  summary -->
-<div class="padding m-t-md m-b-lg">
+<div class="padding m-t-md">
 
     <!-- start report box -->
     <div class="box b-a p-l-0">
@@ -123,7 +123,7 @@
 
             <!-- start visualization chart -->
             <div class="p-a-md">
-                <echart config="visualizationConfig" options="overviewOptions"></echart>
+                <echart config="perSummaryConfig" options="perSummaryOptions"></echart>
             </div>
             <!-- end visualization chart -->
 
