--- a/app/views/dashboards/performance/_partials/pipeline_summary.html
+++ b/app/views/dashboards/performance/_partials/pipeline_summary.html
@@ -1,5 +1,5 @@
 <!-- start overall area  summary -->
-<div class="padding m-t-md m-b-lg">
+<div class="padding m-t-md">
 
     <!-- start report box -->
     <div class="box b-a p-l-0">
@@ -73,7 +73,7 @@
 
             <!-- start of visualization chart -->
             <div class="p-a-md">
-                <echart config="visualizationConfig" options="overviewOptions"></echart>
+                <echart config="perStatusesConfig" options="perStatusesOptions"></echart>
             </div>
             <!-- end of visualization chart -->
 
