--- a/app/views/dashboards/performance/_partials/service_groups_summary.html
+++ b/app/views/dashboards/performance/_partials/service_groups_summary.html
@@ -5,7 +5,7 @@
     <div class="box b-a p-l-0">
 
         <!-- start header -->
-        <div class="box-header b-b p-t-md  p-b-md" title="Areas Summary">
+        <div class="box-header b-b p-t-md  p-b-md" title="Service Groups Summary">
             <h3>Service Groups Summary</h3>
             <!-- <small>Sub title goes here with small font</small> -->
         </div>
@@ -19,7 +19,7 @@
 
                 <!-- start export -->
                 <li class="nav-item inline">
-                    <a title="Click To Export" class="btn btn-xs rounded white" aria-expanded="false" ng-csv="export('groups')" csv-header="exports.groups.headers" filename="service_groups_overview_reports_{{filters.startedAt | date:settings.dateFormat}}_{{filters.endedAt | date:settings.dateFormat}}.csv">
+                    <a title="Click To Export" class="btn btn-xs rounded white" aria-expanded="false" ng-csv="export('groups')" csv-header="exports.groups.headers" filename="service_groups_performance_reports_{{filters.startedAt | date:settings.dateFormat}}_{{filters.endedAt | date:settings.dateFormat}}.csv">
                         Export
                       </a>
                 </li>
@@ -77,7 +77,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="group in overviews.groups">
+                            <tr ng-repeat="group in performances.groups">
                                 <td title="{{group.name}}">
                                     {{group.name}}
                                 </td>
