link overview reports with performance report on jurisdictions

--- a/app/views/dashboards/overviews/_partials/jurisdictions_summary.html
+++ b/app/views/dashboards/overviews/_partials/jurisdictions_summary.html
@@ -72,7 +72,7 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr ng-repeat="jurisdiction in overviews.jurisdictions">
+                            <tr ng-repeat="jurisdiction in overviews.jurisdictions" ui-sref="app.performances({jurisdiction:jurisdiction,startedAt:filters.startedAt,endedAt:filters.endedAt})">
                                 <td title="{{jurisdiction.name}}">
                                     {{jurisdiction.name}}
                                 </td>
