fix a typo in performance average time summary

--- a/app/views/dashboards/performance/_partials/average_time_summary.html
+++ b/app/views/dashboards/performance/_partials/average_time_summary.html
@@ -3,7 +3,8 @@
 
     <!-- start average attend time -->
     <div class="col-xs-6 col-sm-6 b-a" title="Average Attend Time(Call Duration)">
-        <div> <!--class="padding"-->
+        <div>
+            <!--class="padding"-->
             <div class="text-center">
                 <h2 class="text-center _600 m-t-md">
                     <span title="Average Attend Time(Call Duration) - Minutes Spent">
@@ -15,7 +16,7 @@
                       <span class="text-muted text-xs">secs</span>
                     </span>
                 </h2>
-                <p class="text-muted m-b-md">Avarage Attend Time</p>
+                <p class="text-muted m-b-md">Average Attend Time</p>
             </div>
         </div>
     </div>
@@ -23,7 +24,8 @@
 
     <!-- start average resolve time -->
     <div class="col-xs-6 col-sm-6 b-b b-t b-r" title="Average resolve Time">
-        <div> <!--class="padding"-->
+        <div>
+            <!--class="padding"-->
             <div class="text-center">
                 <h2 class="text-center _600 m-t-md">
                     <span title="Average resolve Time - Days Spent">
@@ -39,7 +41,7 @@
                       <span class="text-muted text-xs">mins</span>
                     </span>
                 </h2>
-                <p class="text-muted m-b-md">Avarage Resolve Time</p>
+                <p class="text-muted m-b-md">Average Resolve Time</p>
             </div>
         </div>
     </div>
