--- a/app/styles/dropbox-radio-checkbox.css
+++ b/app/styles/dropbox-radio-checkbox.css
@@ -1,6 +1,6 @@
-/*!
- * byteskode Team (http://byteskode.com)
- * Copyright 2015 byteskode Group
+/**
+ * The MIT License (MIT)
+ * Copyright (c) 2016 lykmapipo, CodeTanzania & Contributors
  */
 
 .checkbox-custom,
