--- a/app/styles/ng-gallery.css
+++ b/app/styles/ng-gallery.css
@@ -1,7 +1,6 @@
-/*!
- * byteskode (http://byteskode.com)
- * Copyright 2015 byteskode Team
- * @module ng-gallery
+/**
+ * The MIT License (MIT)
+ * Copyright (c) 2016 lykmapipo, CodeTanzania & Contributors
  */
 
 .ng-gallery {
