--- a/app/styles/dropbox-material.css
+++ b/app/styles/dropbox-material.css
@@ -1,8 +1,7 @@
 /**
- * @description bootstrap material form stylesheets insired by dropbox
- * @author byteskode Team <http://www.byteskode.com/>
+ * The MIT License (MIT)
+ * Copyright (c) 2016 lykmapipo, CodeTanzania & Contributors
  */
-
 
 /*form and inputs*/
 
