--- a/app/styles/theme-overrides.css
+++ b/app/styles/theme-overrides.css
@@ -1,3 +1,8 @@
+/**
+ * The MIT License (MIT)
+ * Copyright (c) 2016 lykmapipo, CodeTanzania & Contributors
+ */
+
 /*normalize font family, font size and font weight*/
 
 html,
