--- a/app/views/dashboards/overviews/index.html
+++ b/app/views/dashboards/overviews/index.html
@@ -65,12 +65,13 @@
         <!-- start workspaces summary -->
         <ng-include ng-if="overviews.workspaces  && overviews.workspaces.length > 0" src="'views/dashboards/overviews/_partials/workspaces_summary.html'"></ng-include>
         <!-- end workspaces summary -->
+
         <!-- start no data description -->
         <div ng-if="!overviews.overall" class="row-col h-v">
             <div class="row-cell v-m">
                 <div class="text-center col-sm-6 offset-sm-3 p-y-lg">
-                    <h1 class="display-5 text-muted m-y-lg">Sorry No Any Data Today! Please Update your Filters so See Previous Data.</h1>
-                    <button ng-click="showFilter()" class="btn btn-outline b-grey text-grey">Update Filters</button>
+                    <p class="text-muted m-y-lg">No Data Found. Please update your filters.</p>
+                    <button ng-click="showFilter()" class="btn btn-outline b-grey text-grey" title="Click to update filters">Update Filters</button>
                 </div>
             </div>
         </div>
